--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ form ul {
 
 .content-edit {
     min-height: 300px;
-    margin: 30px auto;
+    margin-bottom: 12px;
     padding: 20px;
     border-width: 1px;
     border-style: solid;
