--- a/templates/forumthread_view.html
+++ b/templates/forumthread_view.html
@@ -34,5 +34,5 @@
 {% endblock %}
 
 {% block reply_form_fields %}
-    {{ form.content_edit_field(slave_model, "content") }}
+    {{ form.content_edit_field(slave_model, "content", label_text=_("Your reply")) }}
 {% endblock %}
